--- a/css/saud.css
+++ b/css/saud.css
@@ -1,74 +1,89 @@
-.container {
-  margin: 0 auto;
-  width: 250px;
-  height: 200px;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+@media screen and (min-width: 801px) {
+  .collage_gallery {
+    position: absolute;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+  }
+}
+
+.collage_photo {
+  width: 20%;
   position: relative;
-  perspective: 1000px;
+  background: white;
+  box-shadow: inset 0px 0px 50px rgba(0, 0, 0, 0.1), 0px 5px 10px rgba(0, 0, 0, 0.25);
+  float: left;
+  margin-top: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  margin-left: 0;
+  border-radius: 3px;
+  padding: 10px 10px 10px 10px;
+  -webkit-transition: all 100ms ease-out;
+  transition: all 100ms ease-out;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
 }
-
-.carousel {
-  height: 100%;
+.collage_photo img {
   width: 100%;
-  position: absolute;
-  transform-style: preserve-3d;
-  transition: transform 1s;
+  height: auto;
+  position: relative;
 }
-
-.item {
-  display: block;
-  position: absolute;
-  background: #000;
-  width: 250px;
-  height: 200px;
-  line-height: 200px;
-  font-size: 5em;
+.collage_photo figcaption {
+  margin-top: 10px;
+  font-family: 'Indie Flower', cursive;
+  font-size: 24px;
+  font-weight: bold;
   text-align: center;
-  color: #FFF;
-  opacity: 0.95;
-  border-radius: 10px;
+  line-height: 1;
+  color: black;
 }
-
-.a {
-  transform: rotateY(0deg) translateZ(250px);
-  background: #ed1c24;
+@media screen and (max-width: 400px) {
+  .collage_photo {
+    width: 90%;
+    -webkit-transform: rotateZ(0deg) !important;
+            transform: rotateZ(0deg) !important;
+    margin: 20px auto 0 auto;
+    float: none;
+  }
 }
-.b {
-  transform: rotateY(60deg) translateZ(250px);
-  background: #0072bc;
+@media screen and (min-width: 401px) {
+  .collage_photo:hover {
+    -webkit-transform: rotateZ(0deg) scale(1.2) !important;
+            transform: rotateZ(0deg) scale(1.2) !important;
+    z-index: 257 !important;
+    box-shadow: inset 0px 0px 50px rgba(0, 0, 0, 0.1), 0px 0px 29px rgba(0, 0, 0, 0.2);
+  }
 }
-.c {
-  transform: rotateY(120deg) translateZ(250px);
-  background: #39b54a;
+@media screen and (min-width: 401px) and (max-width: 600px) {
+  .collage_photo {
+    width: 50%;
+  }
 }
-.d {
-  transform: rotateY(180deg) translateZ(250px);
-  background: #f26522;
+@media screen and (min-width: 601px) and (max-width: 800px) {
+  .collage_photo {
+    width: 33.3333%;
+  }
 }
-.e {
-  transform: rotateY(240deg) translateZ(250px);
-  background: #630460;
-} 
-.f {
-  transform: rotateY(300deg) translateZ(250px);
-  background: #8c6239;
+@media screen and (min-width: 801px) and (max-width: 1000px) {
+  .collage_photo {
+    width: 25%;
+  }
 }
-
-.next, .prev {
-  color: #444;
-  position: absolute;
-  top: 100px;
-  padding: 1em 2em;
-  cursor: pointer;
-  background: #CCC;
-  border-radius: 5px;
-  border-top: 1px solid #FFF;
-  box-shadow: 0 5px 0 #999;
-  transition: box-shadow 0.1s, top 0.1s;
+@media screen and (min-width: 1001px) {
+  .collage_photo {
+    width: 20%;
+  }
 }
-.next:hover, .prev:hover { color: #000; }
-.next:active, .prev:active {
-  top: 104px;
-  box-shadow: 0 1px 0 #999;
-}
-.next { right: 5em; }
-.prev { left: 5em; }
