--- a/css/david.css
+++ b/css/david.css
@@ -1,64 +1,112 @@
-/*Time for the CSS*/
+/****
+Images by 
+Bryan Moats, Mike Dornseif, Griffin Moore, Andrea Austoni, Jack Hughes, Jeremy Fryc
+****/
 
-.cg_slider{
-	width: 640px; /*Same as width of the large image*/
-	position: relative;
-	/*Instead of height we will use padding*/
-	padding-top: 320px; /*That helps bring the labels down*/
+#fix_top
+{
+  top: -500%;
+}
+
+.collage {
+    width: 500px;
+		/* margin: 100px auto; */
+    position: relative;
+	top:-500%;
+}
+
+    .collage a {
+        position: absolute;
+        max-width: 220px;
+        padding: 10px;
+        background-color:rgb(255,255,255);
+    
+            transform:rotate(-7deg);
+        -ms-transform:rotate(-7deg); 
+        -moz-transform:rotate(-7deg);
+        -webkit-transform:rotate(-7deg);
+        -o-transform:rotate(-7deg);
 	
-	margin: 100px auto;
-	
-	/*Lets add a shadow*/
-	box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.75);
-}
+        -webkit-transition: all 0.2s linear;
+        -moz-transition: all 0.2s linear;
+        -o-transition: all 0.2s linear;
+        -ms-transition: all 0.2s linear;
+        transition: all 0.2s linear;
+				
+				/*** Fix for Webkit to resolve the flickering issue
+	           Suggested by erikhatfield ***/
+				-webkit-transform-style: preserve-3d;
+    
+        -moz-box-shadow:1px 1px 3px rgba(0,0,0,0.2);
+        -webkit-box-shadow:1px 1px 3px rgba(0,0,0,0.2);
+        box-shadow:1px 1px 3px rgba(0,0,0,0.2);
+        -ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=1,OffY=1,Color=#33000000,Positive=true)";
+        filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=1,OffY=1,Color=#33000000,Positive=true);
+    }
 
+    .collage a:nth-child(2) {
+            transform:rotate(7deg);
+        -ms-transform:rotate(7deg); 
+        -moz-transform:rotate(7deg);
+        -webkit-transform:rotate(7deg);
+        -o-transform:rotate(7deg);
+        margin-left: 30%;
+    }
 
-/*Last thing remaining is to add transitions*/
-.cg_slider>img{
-	position: absolute;
-	left: 0; top: 0;
-	transition: all 0.5s;
-}
+    .collage a:nth-child(3) {
+            transform:rotate(-15deg);
+        -ms-transform:rotate(-15deg); 
+        -moz-transform:rotate(-15deg);
+        -webkit-transform:rotate(-15deg);
+        -o-transform:rotate(-15deg);
+        margin-left: 60%;
+    }
 
-.cg_slider input[name='slide_switch'] {
-	display: none;
-}
+    .collage a:nth-child(4) {
+            transform:rotate(-15deg);
+        -ms-transform:rotate(-15deg); 
+        -moz-transform:rotate(-15deg);
+        -webkit-transform:rotate(-15deg);
+        -o-transform:rotate(-15deg);
+        margin-top: 150px;
+        margin-left: 15%;
+    }
 
-.cg_slider label {
-	/*Lets add some spacing for the thumbnails*/
-	margin: 18px 0 0 18px;
-	border: 3px solid #999;
-	
-	float: left;
-	cursor: pointer;
-	transition: all 0.5s;
-	
-	/*Default style = low opacity*/
-	opacity: 0.6;
-}
+    .collage a:nth-child(5) {
+            transform:rotate(7deg);
+        -ms-transform:rotate(7deg); 
+        -moz-transform:rotate(7deg);
+        -webkit-transform:rotate(7deg);
+        -o-transform:rotate(7deg);
+        margin-left: 50%;
+        margin-top: 150px;
+    }
+    
 
-.cg_slider label img{
-	display: block;
-}
+        .collage a img {
+            max-width: 100%;
+            max-height: 100%;
+            filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+            filter: gray;
+            -webkit-filter: grayscale(100%);
+        }
 
-/*Time to add the click effects*/
-.cg_slider input[name='slide_switch']:checked+label {
-	border-color: #666;
-	opacity: 1;
-}
-/*Clicking any thumbnail now should change its opacity(style)*/
-/*Time to work on the main images*/
-.cg_slider input[name='slide_switch'] ~ img {
-	opacity: 0;
-	transform: scale(1.1);
-}
-/*That hides all main images at a 110% size
-On click the images will be displayed at normal size to complete the effect
-*/
-.cg_slider input[name='slide_switch']:checked+label+img {
-	opacity: 1;
-	transform: scale(1);
-}
-/*Clicking on any thumbnail now should activate the image related to it*/
+        .collage a:hover { 
+            z-index: 999;
+                transform:rotate(0deg);
+            -ms-transform:rotate(0deg); 
+            -moz-transform:rotate(0deg);
+            -webkit-transform:rotate(0deg);
+            -o-transform:rotate(0deg);
+            
+            -webkit-transition: all 0.2s linear;
+            -moz-transition: all 0.2s linear;
+            -o-transition: all 0.2s linear;
+            -ms-transition: all 0.2s linear;
+            transition: all 0.2s linear;
+        }
 
-/*We are done :)*/
+        .collage a:hover > img {
+            filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
+            -webkit-filter: grayscale(0%);
+        }
